update swag configure
