# docs/swagger.json
@@ -9,9 +9,47 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
+        "/chat/connect": {
+            "get": {
+                "description": "建立WebSocket连接",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Chat"
+                ],
+                "summary": "WebSocket连接",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户ID",
+                        "name": "uuid",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "username",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "101": {
+                        "description": "Switching Protocols to websocket",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/example/hello_world": {
             "get": {
-                "description": "测试接口",
+                "description": "返回 Hello World",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,15 +59,12 @@
                 "tags": [
                     "example"
                 ],
-                "summary": "测试接口",
+                "summary": "Hello World",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "Hello World",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "type": "string"
                         }
                     }
                 }
